fixed contact box getting cut off by footer on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@
   text-align: center;
 }
 
+.connect {
+  margin-bottom: 5%;
+}
+
 @media only screen and (min-width: 768px) {
   /* For tablets: */
   .col-m-0 {width: 0%;}
